--- a/src/app/team-game/team-game.component.html
+++ b/src/app/team-game/team-game.component.html
@@ -53,6 +53,6 @@
 
   <!-- Back button to navigate back to league standings -->
   <br />
-  <button class="btn btn-success" (click)="goBack()">Back to Standings</button>
+  <button [ngClass]="myCustomCssclass" (click)="goBack()">Back to Standings</button>
   <br /><br />
 </div>
