--- a/src/app/navigationbar/navigationbar.component.html
+++ b/src/app/navigationbar/navigationbar.component.html
@@ -1,5 +1,8 @@
+
+
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
 <div class="container">
-  <h1 style="text-align: center;">{{ title | uppercase }}</h1>
+  <h1 [ngStyle]="headingCSS">{{ title | uppercase }}</h1>
   <div class="navbar">
     <div *ngFor="let country of countries">
       <button
@@ -12,3 +15,4 @@
     </div>
   </div>
 </div>
+</nav>
