--- a/src/app/standings/standings.component.css
+++ b/src/app/standings/standings.component.css
@@ -4,11 +4,7 @@ tr {
 
 .highlighted-row {
   cursor: pointer;
-  background-color: rgb(
-    174,
-    160,
-    160
-  ); /* Change to your desired highlight color */
+  background-color: #c0c0c0; /* Change to your desired highlight color */
   color: #ff123f;
   /* font-weight: bold;
   font-size: larger; */
