--- a/src/app/team-game/team-game.component.css
+++ b/src/app/team-game/team-game.component.css
@@ -1,4 +1,4 @@
-.myCustomCssclass{
+.myCustomCssclass {
   padding: 10px 20px;
   margin: 10px;
   background-color: rgb(28, 183, 144);
@@ -7,4 +7,9 @@
   font-size: 18px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+tr:hover {
+  background-color: darkcyan;
+  color: white;
 }
